fixed z-index issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body {
   font-family: 'Poppins', sans-serif;
   overflow-x: hidden;
-  // z-index: 0;
 }
 
 nav img {
@@ -24,7 +23,11 @@ nav img {
 }
 
 .scrollspy {
-  z-index: 0;
+  z-index: 1;
+}
+
+.on-top {
+  z-index: 100;
 }
 
 #hero {
